--- a/classiq_challenge.ipynb
+++ b/classiq_challenge.ipynb
@@ -66,20 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 815,
+   "execution_count": 539,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\caleb\\Documents\\iQuHack\\iQuhack.conda\\Lib\\site-packages\\classiq\\_internals\\authentication\\token_manager.py:82: UserWarning: Device is already registered.\n",
-      "Generating a new refresh token should only be done if the current refresh token is compromised.\n",
-      "To do so, set the overwrite parameter to true\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import classiq\n",
     "classiq.authenticate()"
@@ -94,17 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 816,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Opening: https://platform.classiq.io/circuit/8633155a-af2e-4115-9b49-cfcacb0ab8ca?version=0.36.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from classiq import *\n",
     "K =5\n",
@@ -159,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 806,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,77 +164,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 807,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The functions you need go here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 928,
+   "execution_count": 527,
    "metadata": {},
    "outputs": [],
    "source": [
     "@QFunc\n",
-    "def linear_func(a:QParam[float],b: QParam[float], x:QNum, y: Output[QNum]):\n",
-    "        y |= a*x+b"
+    "def piecewise_func(a:QParam[float], b:QParam[float], x:QNum, y:Output[QNum]):\n",
+    "    y |= x + 0.0001\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 929,
+   "execution_count": 528,
    "metadata": {},
    "outputs": [],
    "source": [
     "@QFunc\n",
-    "def inplace_linear_attempt(a:QParam[float],b: QParam[float], x:QNum, y: QNum):\n",
+    "def inplace_piecewise_func(a:QParam[float],b: QParam[float], x:QNum, y: QNum):\n",
     "    tmp = QNum('tmp')\n",
-    "    linear_func(a,b,x,tmp)\n",
-    "    inplace_xor(tmp,y)"
+    "    within_apply(compute= lambda: piecewise_func(a,b,x,tmp),\n",
+    "                action= lambda: inplace_xor(tmp,y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 948,
+   "execution_count": 529,
    "metadata": {},
    "outputs": [],
    "source": [
     "@QFunc\n",
     "def control_logic(a: QParam[list[float]], b: QParam[list[float]], controller:QNum, x: QNum, y: QNum):\n",
-    "    lambda i: quantum_if(controller==i, lambda: linear_func(a[i],b[i],x,y))\n"
+    "    repeat(count=a.len(), iteration=lambda i: quantum_if(controller==i, lambda: inplace_piecewise_func(a[i],b[i],x,y)))\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 941,
+   "execution_count": 530,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The heart of the code - the function that calculates the hyperbolic tangent\n",
     "@QFunc\n",
-    "def compute_tanh(precision: QParam[int],    # The precision of x and tanh_x - how many fraction digits will represent your solution\n",
-    "                 x: QNum,                   # A quantum variable that is represents numbers\n",
-    "                 tanh_x: Output[QNum]       # The output of the function, which means it needs to be initialized within the scope of the function\n",
+    "def compute_tanh(precision: QParam[int],\n",
+    "                 x: QNum,  \n",
+    "                 tanh_x: Output[QNum]\n",
     "                 ):\n",
-    "    a = [1, .51]\n",
-    "    b = [1, .26]\n",
+    "    \n",
+    "    allocate_num(num_qubits=precision,\n",
+    "                 is_signed=False,\n",
+    "                 fraction_digits=precision,\n",
+    "                 out=tanh_x)\n",
     "    y = QNum('y')\n",
-    "    allocate_num(num_qubits=precision, is_signed=False, fraction_digits=precision, out=y)\n",
+    "    allocate_num(num_qubits=1, is_signed=False, fraction_digits=1, out=y)\n",
     "\n",
-    "    # Setting the controller in a superpostion\n",
-    "    controller = QNum(\"controller\")\n",
-    "    allocate_num(1,False,0,controller)\n",
-    "    H(controller)\n",
-    "    control_logic(a, b, controller, x, y)\n",
-    "    allocate_num(num_qubits=precision, is_signed=False, fraction_digits=precision, out=tanh_x)\n",
+    "    controller = QNum('controller')\n",
+    "    allocate_num(2,False,0,controller)\n",
+    "    hadamard_transform(controller)\n",
+    "\n",
+    "    a = [1.0,0.9,0.7,0.5]\n",
+    "    b = [0.0,0.3,0.1,0.3]    \n",
+    "\n",
+    "    control_logic(a,b,controller,x,y)\n",
     "    inplace_add(y, tanh_x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 944,
+   "execution_count": 531,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 945,
+   "execution_count": 532,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,26 +262,37 @@
     "    compute_tanh(precision,x,y)\n",
     "\n",
     "# Generating the model itslef\n",
-    "qmod = create_model(main)"
+    "qmod = create_model(main)\n",
+    "qmod = set_constraints(qmod,Constraints(optimization_parameter='width'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 946,
+   "execution_count": 533,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening: https://platform.classiq.io/circuit/17eb2a8e-a511-40f1-852f-2747e89ee970?version=0.36.1\n"
+      "Synthesized circuit width: 24, depth: 114\n",
+      "Opening: https://platform.classiq.io/circuit/71ad586f-ca2c-4a6a-8bb2-b1480c144996?version=0.36.1\n"
      ]
     }
    ],
    "source": [
-    "qmod = set_constraints(qmod,Constraints(optimization_parameter='width'))\n",
-    "qprog = synthesize(qmod)\n",
-    "show(qprog)"
+    "def print_depth_width(quantum_program):\n",
+    "    generated_circuit = GeneratedCircuit.parse_raw(quantum_program)\n",
+    "    print(f\"Synthesized circuit width: {generated_circuit.data.width}, depth: {generated_circuit.transpiled_circuit.depth}\")\n",
+    "\n",
+    "\n",
+    "quantum_program = synthesize(qmod)\n",
+    "print_depth_width(quantum_program)\n",
+    "\n",
+    "show(quantum_program) # view the circuit in the IDE\n",
+    "\n",
+    "job = execute(quantum_program)\n",
+    "job.open_in_ide() # view the resulted histogram in the IDE"
    ]
   },
   {
@@ -323,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 534,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 535,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,14 +386,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 536,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Files names (no extensions needed!)\n",
-    "file_name_qmod = 'qmod_default' #TODO change to your file_name\n",
-    "file_name_qprog_stage_1 = 'qprog_stage_1_default' #TODO change to your file_name\n",
-    "file_name_qprog_stage_2 = 'qprog_stage_2_default' #TODO change to your file_name"
+    "file_name_qmod = 'qmod_Caleb_Joseph_Squid_Jacob' #TODO change to your file_name\n",
+    "file_name_qprog_stage_1 = 'qprog_stage_1_Caleb_Joseph_Squid_Jacob' #TODO change to your file_name\n",
+    "file_name_qprog_stage_2 = 'qprog_stage_2_Caleb_Joseph_Squid_Jacob' #TODO change to your file_name"
    ]
   },
   {
@@ -420,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 537,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,18 +442,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 499,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening: https://platform.classiq.io/circuit/6af7aa86-f919-435d-b88b-b99ae62f6768?version=0.36.1\n"
+     ]
+    }
+   ],
    "source": [
     "show(qprog_stage_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 500,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening: https://platform.classiq.io/circuit/108148db-bafe-4e83-8dae-d8cb780752e2?version=0.36.1\n"
+     ]
+    }
+   ],
    "source": [
     "show(qprog_stage_2)"
    ]
@@ -490,9 +494,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 538,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Synthesizing quantum program stage 1 with the execution preferences\n",
+      "Synthesized circuit width: 28, depth: 111\n",
+      "Executing the quantum program\n",
+      "{'x': 0.0, 'y': 0.0}\n",
+      "{'x': 0.0625, 'y': 0.0}\n",
+      "{'x': 0.125, 'y': 0.0}\n",
+      "{'x': 0.1875, 'y': 0.0}\n",
+      "{'x': 0.25, 'y': 0.0}\n",
+      "{'x': 0.3125, 'y': 0.0}\n",
+      "{'x': 0.375, 'y': 0.0}\n",
+      "{'x': 0.4375, 'y': 0.0}\n",
+      "{'x': 0.5, 'y': 0.5}\n",
+      "{'x': 0.5625, 'y': 0.5}\n",
+      "{'x': 0.625, 'y': 0.5}\n",
+      "{'x': 0.6875, 'y': 0.5}\n",
+      "{'x': 0.75, 'y': 0.5}\n",
+      "{'x': 0.8125, 'y': 0.5}\n",
+      "{'x': 0.875, 'y': 0.5}\n",
+      "{'x': 0.9375, 'y': 0.5}\n",
+      "Results of stage 1 \n",
+      " Max distance =  0.4613487953888654\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def evaluate_score_stage_1(results, user_input_precision):\n",
@@ -529,7 +561,7 @@
     "\n",
     "# Execution parameters\n",
     "num_shots = 1000\n",
-    "backend_name = \"aer_simulator\" # \"aer_simulator\", \"nvidia_state_vector_simulator\"\n",
+    "backend_name = \"nvidia_state_vector_simulator\" # \"aer_simulator\", \"nvidia_state_vector_simulator\"\n",
     "\n",
     "qmod_stage_1 = set_execution_preferences(qmod_stage_1, \n",
     "                                        ExecutionPreferences(\n",
@@ -553,9 +585,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 502,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Results of stage 2 \n",
+      "Precision = 7, Circuit depth = 258\n"
+     ]
+    }
+   ],
    "source": [
     "generated_circuit = GeneratedCircuit.parse_obj(json.loads(qprog_stage_2))\n",
     "print(f'\\nResults of stage 2 \\nPrecision = {precision_value_stage_2}, Circuit depth = {generated_circuit.transpiled_circuit.depth}')"
@@ -576,7 +618,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('classiq_0_36_1')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -590,9 +632,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "39f2fb914d68d910e6a44db3a048977f45af665714e1ed570fe3896698105d3f"
@@ -600,5 +641,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
